--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,9 @@ Thumbs.db
 # Vite
 vite.config.js.timestamp-*
 vite.config.ts.timestamp-*
+
+# Testing
+coverage/
+test-results/
+playwright-report/
+.playwright/
