--- a/package.json
+++ b/package.json
@@ -19,9 +19,9 @@
     "db:migrate": "drizzle-kit migrate",
     "db:studio": "drizzle-kit studio",
     "test": "vitest",
-    "test:unit": "vitest run src/**/*.unit.test.ts",
-    "test:integration": "vitest run tests/integration",
-    "test:browser": "vitest run src/**/*.browser.test.ts",
+    "test:unit": "vitest run --project unit",
+    "test:integration": "vitest run --project integration",
+    "test:browser": "vitest run --project browser",
     "test:e2e": "playwright test",
     "test:coverage": "vitest run --coverage",
     "test:ui": "vitest --ui"
