feat: add theme toggle component
Implement theme toggle component following TDD methodology:
- Add ThemeToggle component using mode-watcher for theme switching
- Display sun icon in light mode, moon icon in dark mode
- Toggle theme on button click using mode-watcher's toggleMode
- Add component tests with mocked mode-watcher module

Testing infrastructure improvements:
- Add component test project with jsdom environment
- Configure browser resolve conditions for Svelte 5
- Add jest-dom/vitest types for better TypeScript support
- Install jsdom and @vitest/ui dependencies

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "test": "vitest",
     "test:unit": "vitest run --project unit",
     "test:integration": "vitest run --project integration",
-    "test:browser": "vitest run --project browser",
+    "test:component": "vitest run --project component",
     "test:e2e": "playwright test",
     "test:coverage": "vitest run --coverage",
     "test:ui": "vitest --ui"
@@ -44,9 +44,11 @@
     "@types/node": "^24",
     "@vitest/browser": "^4.0.16",
     "@vitest/coverage-v8": "^4.0.16",
+    "@vitest/ui": "^4.0.16",
     "bits-ui": "^2.14.4",
     "drizzle-kit": "^0.31.8",
     "drizzle-orm": "^0.45.0",
+    "jsdom": "^27.4.0",
     "knip": "^5.78.0",
     "mode-watcher": "^1.1.0",
     "svelte": "^5.45.6",
