--- a/biome.json
+++ b/biome.json
@@ -74,6 +74,10 @@
           "correctness": {
             "noUnusedImports": "off",
             "noUnusedVariables": "off"
+          },
+          "style": {
+            "useConst": "off",
+            "useImportType": "off"
           }
         }
       }
