docs: update environment configuration
- Add comprehensive .env.example with detailed documentation for all
  environment variables, organized by category (database, auth, server,
  performance tuning) with quick start guide
- Create environment validation module (src/lib/server/config/env.ts)
  with startup checks for required variables and type-safe access
- Add 22 unit tests for environment validation including production
  mode requirements and error handling
- Create unified config index exporting both env and performance modules
- Update CLAUDE.md with expanded environment variables documentation

Environment validation features:
- Required: DATABASE_URL (PostgreSQL format validated)
- Required in production: BETTER_AUTH_SECRET (min 32 chars)
- Optional: ADMIN_PASSWORD, ORIGIN, NODE_ENV
- Helper functions: isProduction(), isDevelopment(), validateEnv()
- Safe logging: getEnvSummary() masks sensitive values

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,100 @@
-DATABASE_URL="postgres://root:mysecretpassword@localhost:5432/local"
+# =============================================================================
+# sv-logger Environment Configuration
+# =============================================================================
+# Copy this file to .env and fill in your values.
+# Required variables must be set for the application to start.
+#
+# Generate secrets using: openssl rand -base64 32
+# =============================================================================
+
+# -----------------------------------------------------------------------------
+# DATABASE (Required)
+# -----------------------------------------------------------------------------
+
+# PostgreSQL connection string
+# Format: postgresql://user:password@host:port/database
+# Example with local Docker: postgresql://postgres:password@localhost:5432/svlogger
+DATABASE_URL="postgresql://root:mysecretpassword@localhost:5432/local"
+
+# -----------------------------------------------------------------------------
+# AUTHENTICATION (Required in production)
+# -----------------------------------------------------------------------------
+
+# Secret key for better-auth session encryption
+# MUST be at least 32 characters in production
+# Generate with: openssl rand -base64 32
 BETTER_AUTH_SECRET="your-32-character-secret-key-here"
+
+# Admin user password for initial setup
+# Used by: bun run db:seed
+# Minimum 8 characters required
 ADMIN_PASSWORD="your-admin-password-here"
+
+# -----------------------------------------------------------------------------
+# SERVER (Optional)
+# -----------------------------------------------------------------------------
+
+# Base URL for production deployment
+# Used for CORS and trusted origins configuration
+# Example: https://logs.yourdomain.com
+# ORIGIN="https://your-domain.com"
+
+# Environment mode (development or production)
+# Affects validation strictness and default behaviors
+# NODE_ENV="development"
+
+# -----------------------------------------------------------------------------
+# PERFORMANCE TUNING (Optional)
+# -----------------------------------------------------------------------------
+# These values have sensible defaults. Only adjust if you understand the impact.
+
+# SSE (Server-Sent Events) Batching Configuration
+# ------------------------------------------------
+
+# Time window (ms) to batch logs before sending to clients
+# Lower = more responsive, Higher = less network overhead
+# Default: 1500, Range: 100-10000
+# SSE_BATCH_WINDOW_MS="1500"
+
+# Maximum logs per batch before immediate flush
+# Default: 50, Range: 1-500
+# SSE_MAX_BATCH_SIZE="50"
+
+# Keep-alive heartbeat interval (ms) to prevent connection timeout
+# Default: 30000 (30 seconds), Range: 5000-300000
+# SSE_HEARTBEAT_INTERVAL_MS="30000"
+
+# Log Stream Configuration
+# ------------------------
+
+# Maximum logs to keep in memory per client
+# Higher = more history available, more memory usage
+# Default: 1000, Max: 10000
+# LOG_STREAM_MAX_LOGS="1000"
+
+# =============================================================================
+# QUICK START
+# =============================================================================
+#
+# 1. Copy this file:
+#    cp .env.example .env
+#
+# 2. Generate secrets:
+#    echo "BETTER_AUTH_SECRET=$(openssl rand -base64 32)" >> .env
+#
+# 3. Set your admin password:
+#    Edit .env and set ADMIN_PASSWORD
+#
+# 4. Start the database:
+#    bun run db:start
+#
+# 5. Run migrations:
+#    bun run db:push
+#
+# 6. Seed the admin user:
+#    bun run db:seed
+#
+# 7. Start the development server:
+#    bun run dev
+#
+# =============================================================================
