--- a/package.json
+++ b/package.json
@@ -34,8 +34,6 @@
     "@playwright/test": "^1.57.0",
     "@sveltejs/kit": "^2.49.1",
     "@sveltejs/vite-plugin-svelte": "^6.2.1",
-    "@tailwindcss/forms": "^0.5.10",
-    "@tailwindcss/typography": "^0.5.19",
     "@tailwindcss/vite": "^4.1.18",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/svelte": "^5.3.1",
@@ -57,8 +55,7 @@
     "tailwindcss": "^4.1.18",
     "typescript": "^5.9.3",
     "vite": "^7.2.6",
-    "vitest": "^4.0.16",
-    "vitest-browser-svelte": "^2.0.1"
+    "vitest": "^4.0.16"
   },
   "dependencies": {
     "@lucide/svelte": "^0.562.0",
@@ -66,7 +63,6 @@
     "clsx": "^2.1.1",
     "nanoid": "^5.1.6",
     "postgres": "^3.4.7",
-    "sveltekit-sse": "^0.14.3",
     "tailwind-merge": "^3.4.0",
     "tailwind-variants": "^3.2.2",
     "tw-animate-css": "^1.4.0",
