--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -267,12 +267,36 @@ jobs:
           retention-days: 7
 
   # =============================================================================
+  # Docker Build Verification
+  # =============================================================================
+  docker-build:
+    name: Docker Build
+    runs-on: ubuntu-latest
+    timeout-minutes: 15
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v6
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Build Docker image
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          push: false
+          tags: sv-logger:ci-${{ github.sha }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+
+  # =============================================================================
   # Final Status Check (all jobs must pass)
   # =============================================================================
   ci-success:
     name: CI Success
     runs-on: ubuntu-latest
-    needs: [lint, test-unit, test-integration, test-e2e, build]
+    needs: [lint, test-unit, test-integration, test-e2e, build, docker-build]
     if: always()
 
     steps:
@@ -282,7 +306,8 @@ jobs:
              [[ "${{ needs.test-unit.result }}" != "success" ]] || \
              [[ "${{ needs.test-integration.result }}" != "success" ]] || \
              [[ "${{ needs.test-e2e.result }}" != "success" ]] || \
-             [[ "${{ needs.build.result }}" != "success" ]]; then
+             [[ "${{ needs.build.result }}" != "success" ]] || \
+             [[ "${{ needs.docker-build.result }}" != "success" ]]; then
             echo "❌ One or more CI jobs failed"
             exit 1
           fi
