--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,20 +1,22 @@
-name: CI
+name: Release
 
 on:
   push:
-    branches: [main]
-    tags-ignore: ["**"]
-  pull_request:
-    branches: [main]
+    tags: ["v*"]
   workflow_dispatch:
+    inputs:
+      tag:
+        description: "Tag to release (e.g., v1.0.0)"
+        required: true
+        type: string
 
 permissions:
   contents: read
   packages: write
 
-# Cancel in-progress runs on same branch/PR
+# Cancel in-progress releases for same tag
 concurrency:
-  group: ci-${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
+  group: release-${{ github.ref }}
   cancel-in-progress: true
 
 env:
@@ -265,46 +267,14 @@ jobs:
       - name: Build application
         run: bun --bun run build
 
-      - name: Upload build artifacts
-        uses: actions/upload-artifact@v6
-        with:
-          name: build-${{ github.run_id }}
-          path: build/
-          retention-days: 7
-
   # =============================================================================
-  # Docker Build Verification
-  # =============================================================================
-  docker-build:
-    name: Docker Build
-    runs-on: ubuntu-latest
-    timeout-minutes: 15
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v6
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Build Docker image
-        uses: docker/build-push-action@v6
-        with:
-          context: .
-          push: false
-          tags: sv-logger:ci-${{ github.sha }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-
-  # =============================================================================
-  # Publish Docker images for main branch pushes
+  # Publish Docker images for releases
   # =============================================================================
   docker-publish:
     name: Publish Docker Images
     runs-on: ubuntu-latest
     timeout-minutes: 30
-    needs: [lint, test-unit, test-integration, test-e2e, build, docker-build]
-    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+    needs: [lint, test-unit, test-integration, test-e2e, build]
     outputs:
       image-tags: ${{ steps.meta.outputs.tags }}
       image-digest: ${{ steps.build.outputs.digest }}
@@ -328,9 +298,14 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Extract short commit SHA
-        id: short-sha
-        run: echo "short_sha=${GITHUB_SHA:0:7}" >> $GITHUB_OUTPUT
+      - name: Determine version tag
+        id: version
+        run: |
+          if [[ "${{ github.event_name }}" == "workflow_dispatch" ]]; then
+            echo "tag=${{ github.event.inputs.tag }}" >> $GITHUB_OUTPUT
+          else
+            echo "tag=${{ github.ref_name }}" >> $GITHUB_OUTPUT
+          fi
 
       - name: Extract metadata
         id: meta
@@ -338,15 +313,14 @@ jobs:
         with:
           images: ghcr.io/${{ github.repository }}
           tags: |
-            type=raw,value=dev
-            type=raw,value=dev-${{ steps.short-sha.outputs.short_sha }}
-            type=raw,value=${{ steps.short-sha.outputs.short_sha }}
+            type=raw,value=${{ steps.version.outputs.tag }}
+            type=raw,value=latest
           labels: |
-            org.opencontainers.image.title=sv-logger Development Build
-            org.opencontainers.image.description=Development build from main branch
+            org.opencontainers.image.title=sv-logger
+            org.opencontainers.image.description=Self-hosted logging platform with real-time streaming
             org.opencontainers.image.source=${{ github.event.repository.html_url }}
             org.opencontainers.image.revision=${{ github.sha }}
-            org.opencontainers.image.ref.name=${{ github.ref_name }}
+            org.opencontainers.image.version=${{ steps.version.outputs.tag }}
 
       - name: Build and push Docker image
         id: build
@@ -357,51 +331,43 @@ jobs:
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=gha,scope=main
-          cache-to: type=gha,mode=max,scope=main
+          cache-from: type=gha,scope=release
+          cache-to: type=gha,mode=max,scope=release
           provenance: true
           sbom: true
 
       - name: Add build info to job summary
         run: |
-          echo "## 🐳 Docker Build Complete" >> $GITHUB_STEP_SUMMARY
+          echo "## 🚀 Release Build Complete" >> $GITHUB_STEP_SUMMARY
           echo "" >> $GITHUB_STEP_SUMMARY
-          echo "**Main Branch Build**" >> $GITHUB_STEP_SUMMARY
-          echo "- **Latest Dev:** \`ghcr.io/${{ github.repository }}:dev\`" >> $GITHUB_STEP_SUMMARY
-          echo "- **Commit Build:** \`ghcr.io/${{ github.repository }}:${{ steps.short-sha.outputs.short_sha }}\`" >> $GITHUB_STEP_SUMMARY
+          echo "**Version:** \`${{ steps.version.outputs.tag }}\`" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "### Docker Images" >> $GITHUB_STEP_SUMMARY
+          echo "- **Version:** \`ghcr.io/${{ github.repository }}:${{ steps.version.outputs.tag }}\`" >> $GITHUB_STEP_SUMMARY
+          echo "- **Latest:** \`ghcr.io/${{ github.repository }}:latest\`" >> $GITHUB_STEP_SUMMARY
           echo "- **Digest:** \`${{ steps.build.outputs.digest }}\`" >> $GITHUB_STEP_SUMMARY
           echo "- **Platforms:** \`linux/amd64\`, \`linux/arm64\`" >> $GITHUB_STEP_SUMMARY
 
   # =============================================================================
   # Final Status Check (all jobs must pass)
   # =============================================================================
-  ci-success:
-    name: CI Success
+  release-success:
+    name: Release Success
     runs-on: ubuntu-latest
     timeout-minutes: 5
-    needs: [lint, test-unit, test-integration, test-e2e, build, docker-build, docker-publish]
+    needs: [lint, test-unit, test-integration, test-e2e, build, docker-publish]
     if: always()
 
     steps:
       - name: Check all jobs status
         run: |
-          # Check required jobs
           if [[ "${{ needs.lint.result }}" != "success" ]] || \
              [[ "${{ needs.test-unit.result }}" != "success" ]] || \
              [[ "${{ needs.test-integration.result }}" != "success" ]] || \
              [[ "${{ needs.test-e2e.result }}" != "success" ]] || \
              [[ "${{ needs.build.result }}" != "success" ]] || \
-             [[ "${{ needs.docker-build.result }}" != "success" ]]; then
-            echo "❌ One or more CI jobs failed"
+             [[ "${{ needs.docker-publish.result }}" != "success" ]]; then
+            echo "❌ One or more release jobs failed"
             exit 1
           fi
-
-          # Check docker-publish only if it was supposed to run
-          if [[ "${{ github.ref }}" == "refs/heads/main" ]] && [[ "${{ github.event_name }}" == "push" ]]; then
-            if [[ "${{ needs.docker-publish.result }}" != "success" ]]; then
-              echo "❌ Docker publish job failed"
-              exit 1
-            fi
-          fi
-
-          echo "✅ All CI checks passed successfully"
+          echo "✅ Release completed successfully"
