--- a/.github/workflows/sdk-typescript.yml
+++ b/.github/workflows/sdk-typescript.yml
@@ -157,7 +157,8 @@ jobs:
       - name: Setup Node.js (for npm publish)
         uses: actions/setup-node@v4
         with:
-          node-version: "22"
+          node-version: "24"
+          registry-url: "https://registry.npmjs.org"
 
       - name: Install dependencies
         run: bun install --frozen-lockfile
@@ -184,7 +185,7 @@ jobs:
 
       - name: Publish to npm (OIDC)
         if: steps.version-check.outputs.should_publish == 'true'
-        run: npm publish --access public --provenance
+        run: NODE_AUTH_TOKEN="" npm publish --access public --provenance
 
       - name: Add publish info to job summary
         if: steps.version-check.outputs.should_publish == 'true'
