feat: add time-series chart to stats page (#9)
* feat(utils): add timeseries bucketing utilities with tests

Add utility functions for time-series chart implementation:
- getTimeBucketConfig: returns bucket interval and count for time range
- bucketTimestamps: groups timestamps into bucket indices
- fillMissingBuckets: fills gaps with zero counts
- formatBucketLabel: formats bucket timestamps for chart axis

Install layerchart@1.0.13 for charting capabilities.

Includes 17 unit tests covering all edge cases.

* feat(api): add timeseries stats endpoint with integration tests

Add GET /api/projects/[id]/stats/timeseries endpoint that returns
time-bucketed log counts for visualization in an area chart.

Features:
- Supports 15m, 1h, 24h, 7d time ranges with appropriate granularity
- Returns buckets array with timestamp and count for each interval
- Properly filters by project ID and time range
- Handles empty state with zero-filled buckets

Includes 14 integration tests covering:
- Authentication requirements
- Project validation (404 for non-existent)
- All time range variations
- Bucket ordering and timestamp validation
- Project isolation (no cross-project data leakage)

* feat(components): add TimeseriesChart component with tests

Add area chart component for displaying log volume over time:
- Uses LayerChart with dynamic imports (browser-only rendering)
- Time scale X-axis with appropriate formatting per time range
- Touch-friendly tooltips using mode: 'band'
- Loading skeleton, error, and empty states
- Responsive design with CSS custom properties for theming

Includes 22 component tests covering:
- Container rendering and accessibility attributes
- Loading, error, and empty state displays
- Different time range support
- Edge cases (large counts, zero data, single point)

* feat(stats): integrate timeseries chart into stats page

Add "Logs Over Time" area chart section to the stats page:
- Fetches timeseries data from API on mount and range change
- Displays are

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/svelte": "^5.3.1",
     "@testing-library/user-event": "^14.6.1",
+    "@types/d3-scale": "^4.0.9",
     "@types/node": "^25.0.3",
     "@vitest/browser": "^4.0.16",
     "@vitest/coverage-v8": "^4.0.16",
@@ -66,6 +67,7 @@
     "@lucide/svelte": "^0.562.0",
     "better-auth": "^1.4.10",
     "clsx": "^2.1.1",
+    "layerchart": "^1.0.13",
     "nanoid": "^5.1.6",
     "postgres": "^3.4.8",
     "tailwind-merge": "^3.4.0",
