--- a/sdks/python/pyproject.toml
+++ b/sdks/python/pyproject.toml
@@ -8,7 +8,7 @@ version = "0.1.0"
 description = "Official Python SDK for Logwell logging platform"
 readme = "README.md"
 license = "MIT"
-authors = [{ name = "Logwell", email = "dev@logwell.io" }]
+authors = [{ name = "Divkix", email = "divkix@divkix.me" }]
 keywords = ["logging", "logs", "observability", "logwell", "python"]
 classifiers = [
     "Development Status :: 4 - Beta",
@@ -24,10 +24,7 @@ classifiers = [
     "Typing :: Typed",
 ]
 requires-python = ">=3.9"
-dependencies = [
-    "httpx>=0.25.0",
-    "typing_extensions>=4.0.0",
-]
+dependencies = ["httpx>=0.25.0", "typing_extensions>=4.0.0"]
 
 [project.optional-dependencies]
 dev = [
