feat: add incident intelligence workflow
Implement incident fingerprinting, aggregation, APIs, SSE, and UI.\n\n- add incident table and log incident fields with migration\n- aggregate error/fatal logs transactionally during ingestion\n- add incidents list/detail/timeline APIs and incident SSE stream\n- add incidents page, table, status badge, and timeline panel\n- add backfill script and package command\n- extend shared/client types and docs/env config\n- add unit/component/integration/e2e coverage updates

--- a/.env.example
+++ b/.env.example
@@ -89,6 +89,11 @@ ADMIN_PASSWORD="your-admin-password-here"
 # Default: 3600000 (1 hour), Range: 60000-86400000 (1 minute to 24 hours)
 # LOG_CLEANUP_INTERVAL_MS="3600000"
 
+# Incident auto-resolve threshold in minutes
+# Incident is marked "resolved" when no matching errors arrive within this window
+# Default: 30, Range: 1-10080 (1 minute to 7 days)
+# INCIDENT_AUTO_RESOLVE_MINUTES="30"
+
 # =============================================================================
 # QUICK START
 # =============================================================================
